# speckle

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  api.http  docker-compose.yaml
.github/workflows/: build.yaml  security-audit.yaml
src/: algorithms.rs  config.rs  constants.rs  decode.rs  errors.rs  fixtures.rs  header.rs  jwt.rs  jwt_utils.rs  main.rs  pool.rs  serialize.rs
src/mobc_pool/: mod.rs
