[package]
name = "speckle"
version = "0.1.0"
authors = ["Nic Pearson <nic.s.pearson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
redis = "0.19.0"
mobc-redis = "0.7.0"
mobc = "0.7.0"
thiserror = "1.0"
