[package]
name = "speckle"
version = "0.1.0"
authors = ["Nic Pearson <nic.s.pearson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
jsonwebtoken = "7"
log = "0.4"
mobc-redis = "0.7.0"
mobc = "0.7.0"
pretty_env_logger = "0.4.0"
redis = "0.19.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
