[package]
name = "speckle"
version = "0.1.0"
authors = ["Nic Pearson <nic.s.pearson@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Determines if a JWT exists in a redis db."
homepage = "https://github.com/nicolaspearson/speckle"
repository = "https://github.com/nicolaspearson/speckle"
keywords = ["jwt", "web", "api", "token", "jwk"]
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
dotenv = "0.15.0"
log = "0.4"
mobc-redis = "0.7.0"
mobc = "0.7.0"
pretty_env_logger = "0.4.0"
redis = "0.19.0"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
